✨ feat: 독후감 도메인 로직 토대 마련
리뷰와 유사한 부분들이 많아 리뷰도메인 로직을 copy함->여기서 독후감만의 특성들 로직에 추가하며 완성시킬 예정

--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -94,8 +94,14 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
 
-    // ✅ OAuth2 클라이언트 (카카오 로그인)
+    // OAuth2 클라이언트 (카카오 로그인)
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+
+    //s3의존성 추가
+    implementation 'software.amazon.awssdk:s3:2.25.16'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
 }
 
 tasks.named('test') {
