🔒 chore:  깃 이그노어 등록
application.properties등록+ 기존 등록된 application.properties삭제

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Spring Boot 설정파일 무시
+src/main/resources/application.properties
+bookNuri_back/src/main/resources/application.properties
