--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -99,9 +99,10 @@ dependencies {
 
 
     //s3의존성 추가
-    implementation 'software.amazon.awssdk:s3:2.25.16'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-
+    implementation platform('software.amazon.awssdk:bom:2.20.0')
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:auth'
+    implementation 'software.amazon.awssdk:regions'
 }
 
 tasks.named('test') {
