✨ feat: ocr 이미지->글자 추출 api 추가
ocr 이미지->글자 추출 api 추가

--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 
     implementation 'org.jsoup:jsoup:1.17.2'
 
+    implementation 'net.sourceforge.tess4j:tess4j:5.4.0'
+
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
