--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -22,7 +22,15 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.data:spring-data-elasticsearch:5.2.1'
+    implementation 'co.elastic.clients:elasticsearch-java:8.18.0'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.18'
+
+
 
     implementation 'org.jsoup:jsoup:1.17.2'
 
