✨feat:  도서관 내 도서 검색 API 응답에 totalCount 필드 추가
도서관 내 도서 검색 시 응답 구조를 수정하여 totalCount 값을 함께 반환하도록 변경.
클라이언트에서 전체 검색 결과 개수를 확인할 수 있도록 기능 확장함.

--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -126,3 +126,20 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+/*
+###
+POST http://localhost:8080/db/daegu-books
+Content-Type: application/json
+Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJleHAiOjE3NDkwNjExODAsInVzZXJuYW1lIjoiNDI2NTMxMTIxNSIsInJvbGUiOiJST0xFX1VTRVIifQ.9pZICMlUr7TqrnQGG7QhvxS64UtBKYuz-n2xBBm60qSLd3S4AUr7tTTUE38DiQoHJTtHlJnZIaU0OBHoTAVgFw
+
+
+
+
+###
+GET http://localhost:8080/book/my-ip
+Content-Type: application/json
+Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJleHAiOjE3NDkwNjExODAsInVzZXJuYW1lIjoiNDI2NTMxMTIxNSIsInJvbGUiOiJST0xFX1VTRVIifQ.9pZICMlUr7TqrnQGG7QhvxS64UtBKYuz-n2xBBm60qSLd3S4AUr7tTTUE38DiQoHJTtHlJnZIaU0OBHoTAVgFw
+
+*/
