--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -129,17 +129,10 @@ tasks.named('test') {
 
 
 /*
-###
-POST http://localhost:8080/db/daegu-books
-Content-Type: application/json
-Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJleHAiOjE3NDkwNjExODAsInVzZXJuYW1lIjoiNDI2NTMxMTIxNSIsInJvbGUiOiJST0xFX1VTRVIifQ.9pZICMlUr7TqrnQGG7QhvxS64UtBKYuz-n2xBBm60qSLd3S4AUr7tTTUE38DiQoHJTtHlJnZIaU0OBHoTAVgFw
-
-
-
-
-###
 GET http://localhost:8080/book/my-ip
 Content-Type: application/json
-Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJleHAiOjE3NDkwNjExODAsInVzZXJuYW1lIjoiNDI2NTMxMTIxNSIsInJvbGUiOiJST0xFX1VTRVIifQ.9pZICMlUr7TqrnQGG7QhvxS64UtBKYuz-n2xBBm60qSLd3S4AUr7tTTUE38DiQoHJTtHlJnZIaU0OBHoTAVgFw
+Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJleHAiOjE3NDk0MTM3MTAsInVzZXJuYW1lIjoiNDI2NTMxMTIxNSIsInJvbGUiOiJST0xFX1VTRVIifQ.3VusHDouX6ajJGG8esI-KQMEVX9oygqmr0o79YjnDe7HbOY4Q-ghO-UX9NqfIMkNZoN5uAXIZdUeYe3urqzavA
 
-*/
+
+###
+POST http://localhost:8080/db/daegu-books?startPage=1&endPage=20*/
