✨ feat: 내 책장 검색 기능 구현 및 매핑
- 로그인한 사용자가 특정 책(ISBN13)에 대해 작성한 인용 목록 반환
- 엔드포인트: GET /book/quote/my/isbn/{isbn13}
- 응답: List<BookQuoteResponseDto>
- 본인 작성 여부(writtenByCurrentUser), 좋아요 여부(likedByCurrentUser) 포함

--- a/bookNuri_back/build.gradle
+++ b/bookNuri_back/build.gradle
@@ -135,4 +135,5 @@ Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJleHAiOjE3NDk0MTM3M
 
 
 ###
-POST http://localhost:8080/db/daegu-books?startPage=1&endPage=20*/
+POST http://localhost:8080/db/chungnam-books?startPage=1&endPage=20
+*/
